@@ -16,6 +16,7 @@ acmdlib.register('gen-klass', 'PyUtils.scripts.gen_klass:main')
 
 acmdlib.register('tc.find-pkg', 'PyUtils.scripts.tc_find_pkg:main')
 acmdlib.register('tc.submit-tag', 'PyUtils.scripts.tc_submit_tag:main')
+acmdlib.register('tc.show-clients', 'PyUtils.scripts.tc_show_clients:main')
 
 acmdlib.register('get-tag-diff', 'PyUtils.scripts.get_tag_diff:main')
 
